# quickbooks-automation

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_CONVERSION.md  HANDOFF_TASK_1.md  OUTPUT_DIRECTORY_CHANGE.md  PRODUCT_CODE_EXTRACTION.md  README.md  README_SALES_ANALYZER.md  REPOSITORY_SETUP.md  SALES_DATA_EXTRACTOR_SUMMARY.md  SETUP_GUIDE.md  TASK_13_IMPLEMENTATION_SUMMARY.md  TASK_1_IMPLEMENTATION_SUMMARY.md  TASK_4.2_IMPLEMENTATION_SUMMARY.md  TASK_7_IMPLEMENTATION_SUMMARY.md  TIMESTAMP_FEATURE.md  TOTAL_QTY_FEATURE.md  analyze_sales_data.py  build_exe.py  coding_guidelines.md  commit-message.md  connector.py  create_test_sales_data.py  debug_reports.py  desktop commander cleanup.rar  export_orders.py  extract_sales_data.py  fix_build_issues.py  logger.py  pyproject.toml  quickbooks_autoreport.py  requirements.txt  run_tests.py  setup.py  structure.md
.codex/: config.toml
.github/workflows/: ci.yml  roo_rules.yml
.kiro/handoff/: KT-2025-10-08-quickbooks-continuous-polling-reporter.md
.kiro/settings/: mcp.json
.kiro/specs/quickbooks-autoreport-refactoring/: design.md  requirements.md  tasks.md
.kiro/specs/quickbooks-continuous-polling-reporter/: design.md  requirements.md  tasks.md
.kiro/specs/sales-dashboard/: design.md  requirements.md  tasks.md
.kiro/steering/: 01-philosophy.md  02-project-context.md  03-task-execution.md  04-ai-collaboration.md  05-code-quality.md  06-refactoring.md  07-testing-validation.md  08-debugging.md  09-security.md  10-version-control.md  11-documentation.md  12-commit-messages.md  13-changelog.md  14-logging.md  15-handoff.md  16-quickbooks-qbxml.md  17-script_documentation.md  18-adapters.md  19-ci.md  20-core-services.md  21-docs.md  22-index.md  23-ui-cli.md  24-ui-dashboard.md  25 - mcp.md  25-code-review.md  26-release-operations.md  27-adr-template.md  ALIGNMENT_SUMMARY.md  Changelog.md  Documentation.md  Product Requirements Document (PRD).md  code style.md  commit message.md  debugging.md  feature roadmap.md  logging.md  product.md  production_capacity.md  production_lines.md  (+5 more)
.roo/: mcp.json
.spec-workflow/approvals/quickbooks-continuous-polling-reporter/: approval_1759895709298_gvqinbs4y.json
.spec-workflow/specs/quickbooks-autoreport-refactoring/: design.md  requirements.md  tasks.md
.spec-workflow/specs/quickbooks-continuous-polling-reporter/: design.md  requirements.md  tasks.md
.spec-workflow/steering/: product.md  structure.md  tech.md
apps/cli/: __init__.py  __main__.py
apps/dashboard/: Home.py  README.md
apps/dashboard/pages/: .gitkeep
apps/gui/: __init__.py  __main__.py
data/: item sales detail wk 41w.CSV  sales by item wk 41 2025.CSV  sales_analysis_output.xlsx
docs/: ARCHITECTURE.md  BACKORDERED_FEATURE.md  CLEANUP_SUMMARY.md  CLI_CONVERSION.md  CONTEXT7_FIX_INSTRUCTIONS.md  DASHBOARD_PRODUCT_SUMMARY_UPDATE.md  DASHBOARD_TESTING_GUIDE.md  DASHBOARD_TESTING_QUICKSTART.md  DEVELOPMENT_TOOLS_CONFIGURED.md  FINAL_CLEANUP_SUMMARY.md  HOW_TO_USE_ANALYZE_SALES_DATA.md  MCP_SERVERS_CONFIGURED.md  OBSOLETE_FILES_REPORT.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PYPROJECT_UPDATE_SUMMARY.md  REFACTORING_COMPLETE.md  REFACTORING_SETUP_COMPLETE.md  TASK_10_IMPLEMENTATION_SUMMARY.md  TASK_11_IMPLEMENTATION_SUMMARY.md  TASK_12_IMPLEMENTATION_SUMMARY.md  TASK_4.4_IMPLEMENTATION_SUMMARY.md  TASK_4_IMPLEMENTATION_SUMMARY.md  TASK_5_IMPLEMENTATION_SUMMARY.md  TASK_6_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  TASK_9_IMPLEMENTATION_SUMMARY.md  TRANSACTION_SUMMARY_FEATURE.md  UPDATED_FEATURES_SUMMARY.md  commit-message.md  example_usage.py  item_sales_detail_extractor.md  product.md  product_categorization.xlsx  quickbooks_item_sales_detail_columns_gasco.md  tech.md
fixes/: CHANGES_SUMMARY.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QuickBooks_Error_Handling_Improvements_Summary.md
quickbooks/: __init__.py  cli.py  csv_reader.py  dataframe_utils.py  eta_date_schemas.json  excel_export.py  odoo_enrichment.py  odoo_order_date_schema.json
src/quickbooks_autoreport/: __init__.py  cli.py  config.py  gui.py  main.py
src/quickbooks_autoreport/adapters/: __init__.py  file_adapter.py  logger_adapter.py  settings_adapter.py
src/quickbooks_autoreport/dashboard/: __init__.py  charts.py  charts_display.py  config.py  data_loader.py  metrics.py  metrics_display.py  sidebar.py  utils.py
src/quickbooks_autoreport/domain/: __init__.py  diagnostics.py  exceptions.py  report_config.py  report_result.py  sales_data.py  settings.py
src/quickbooks_autoreport/extractors/: item_sales_detail_extractor.py
src/quickbooks_autoreport/services/: __init__.py  csv_creator.py  diagnostics_service.py  excel_creator.py  export_service.py  insights_generator.py  qbxml_generator.py  report_generator.py  report_parser.py  report_service.py  scheduler.py
src/quickbooks_autoreport/utils/: __init__.py  file_utils.py  logging_utils.py
tests/: test_basic.py  test_config.py  test_qbxml_generator.py  test_xml_generation.py
tests/integration/: REAL_DATA_TEST_NOTE.md  test_cli_workflows.py  test_dashboard_e2e.py  test_dashboard_real_data.py  test_gui_init.py  test_report_flow.py
tests/unit/: test_charts.py  test_charts_display.py  test_data_loader.py  test_error_handling_integration.py  test_metrics.py  test_metrics_display.py  test_sales_data.py  test_sidebar.py  test_utils.py
tests/unit/test_adapters/: test_connection.py  test_error_handler.py  test_file_adapter.py  test_request_handler.py  test_settings_adapter.py  test_xml_pipeline.py
tests/unit/test_domain/: test_diagnostics.py  test_report_config.py  test_report_result.py  test_settings.py
tests/unit/test_services/: test_csv_creator.py  test_excel_creator.py  test_insights_generator.py  test_report_generator.py  test_scheduler.py
(+12 files in other folders)
